--- a/firmaA/index.html
+++ b/firmaA/index.html
@@ -3,274 +3,285 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leady</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>CRM - Lista Leadów</title>
+    <link rel="icon" href="images/favicon.png" type="image/png">
 
     <style>
+        * { box-sizing: border-box; }
+
         body {
+            background-color: #f1f3f6;
             font-family: Arial, sans-serif;
-            margin: 30px;
-            background: #f4f4f4;
+            margin: 0;
+            padding: 20px;
         }
 
-        #loader {
-            font-size: 18px;
-            font-weight: bold;
+        .table-container {
+            max-width: 1100px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+        }
+
+        img.logo {
+            display: block;
+            width: 140px;
+            margin: 0 auto 20px auto;
+        }
+
+        h2 {
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        #searchInput {
+            width: 100%;
+            max-width: 300px;
+            padding: 10px;
             margin-bottom: 15px;
-        }
-
-        .stats {
-            display: flex;
-            gap: 20px;
-            margin-bottom: 20px;
-            font-size: 14px;
-            font-weight: bold;
-        }
-
-        .controls {
-            display: flex;
-            gap: 15px;
-            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
-            background: white;
-            box-shadow: 0 0 4px rgba(0,0,0,0.1);
+            margin-top: 15px;
         }
 
         th, td {
-            padding: 8px;
-            border: 1px solid #ddd;
-            font-size: 13px;
+            padding: 12px;
+            border-bottom: 1px solid #ddd;
+            text-align: left;
         }
 
         th {
-            background: #eee;
-        }
-
-        .status-badge {
-            padding: 4px 8px;
-            border-radius: 4px;
+            background-color: #333;
             color: white;
-            font-weight: bold;
-            text-transform: capitalize;
-            text-align: center;
-            display: inline-block;
+            position: sticky;
+            top: 0;
+            z-index: 10;
         }
 
-        .status-nowy { background: #007bff; }
-        .status-lead-odrzucony { background: #dc3545; }
-        .status-nie-odbiera { background: #ffc107; color: black; }
-        .status-wizyta-umowiona { background: #28a745; }
-        .status-porzucony { background: #6c757d; }
+        .status-nowy          { color: green; font-weight: bold; }
+        .status-nie-odbiera   { color: red; font-weight: bold; }
+        .status-odrzucony     { color: gray; font-weight: bold; }
+        .status-w-trakcie     { color: orange; font-weight: bold; }
+        .status-umowiony      { color: blue; font-weight: bold; }
+
+        #filters {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 15px;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+
+        select, input[type="date"] {
+            padding: 8px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+
+        #campaignFilter {
+            min-width: 180px;
+        }
+
+        .loading {
+            display: none;
+            text-align: center;
+            padding: 20px;
+            font-size: 18px;
+        }
     </style>
 </head>
+
 <body>
 
-    <h2>Leady z kampanii Meta Ads</h2>
+<div class="table-container">
+    <img src="images/logo.png" class="logo">
 
-    <div id="loader">Ładowanie danych...</div>
+    <h2>Lista Leadów</h2>
 
-    <div class="stats">
-        <div>Nowe: <span id="stat-new">0</span></div>
-        <div>Odrzucone: <span id="stat-odrzucone">0</span></div>
-        <div>Nie odbiera: <span id="stat-nieodbiera">0</span></div>
-        <div>Umówione: <span id="stat-umowione">0</span></div>
-        <div>Porzucone: <span id="stat-porzucone">0</span></div>
+    <input type="text" id="searchInput" placeholder="Szukaj leadów...">
+
+    <div id="filters">
+        <label>
+            Kampania:
+            <select id="campaignFilter">
+                <option value="">Wszystkie</option>
+            </select>
+        </label>
+
+        <label>
+            Data od:
+            <input type="date" id="dateFrom">
+        </label>
+
+        <label>
+            Data do:
+            <input type="date" id="dateTo">
+        </label>
+
+        <label>
+            Sortowanie:
+            <select id="sortSelect">
+                <option value="newest">Najnowsze</option>
+                <option value="oldest">Najstarsze</option>
+            </select>
+        </label>
     </div>
 
-    <div class="controls">
-        <select id="statusFilter">
-            <option value="">— Status —</option>
-            <option value="Nowy">Nowy</option>
-            <option value="Lead odrzucony">Lead odrzucony</option>
-            <option value="Nie odbiera">Nie odbiera</option>
-            <option value="Wizyta umówiona">Wizyta umówiona</option>
-            <option value="Porzucony">Porzucony</option>
-        </select>
+    <div class="loading" id="loading">Ładowanie danych...</div>
 
-        <input type="date" id="dateFrom">
-        <input type="date" id="dateTo">
-
-        <select id="sortOrder">
-            <option value="desc">Najnowsze</option>
-            <option value="asc">Najstarsze</option>
-        </select>
-
-        <select id="campaignFilter">
-            <option value="">— Kampania —</option>
-        </select>
-    </div>
-
-    <table id="leadTable">
+    <table id="leadsTable">
         <thead>
             <tr>
                 <th>ID</th>
                 <th>Data</th>
-                <th>Imię</th>
+                <th>Imię i nazwisko</th>
                 <th>Telefon</th>
                 <th>Email</th>
-                <th>Cel</th>
+                <th>Cel wizyty</th>
+                <th>Informacje</th>
                 <th>Status</th>
-                <th>Data aktualizacji</th>
-                <th>Reakcja</th>
+                <th>Ostatnia aktualizacja</th>
                 <th>Kampania</th>
             </tr>
         </thead>
-        <tbody id="tableBody"></tbody>
+        <tbody></tbody>
     </table>
+</div>
 
 
 <script>
-let allRows = [];
+const sheetId = "1LE0FGZxN9phH8TjzvNEi28vvhYx4SqAiq7FPaVTPrOU";
+const sheetURL = `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`;
 
-async function loadData() {
-    try {
-        const res = await fetch(
-            "https://docs.google.com/spreadsheets/d/1pqfVCI-chR0e6TZNgTh4T5bFWcNSrH1h5XlmPRCfjBk/export?format=json"
-        );
+let allLeads = [];
 
-        const raw = await res.text();
-        const jsonStr = raw.replace(/^\)\]\}'/, '');
-        const data = JSON.parse(jsonStr);
-        const rows = data.table.rows;
+document.getElementById("loading").style.display = "block";
 
-        allRows = rows.map(r => {
-            const id = r.c[0]?.v ?? "";
-            const createdRaw = r.c[1]?.f ?? "";
-            const createdDate = createdRaw ? new Date(createdRaw) : null;
-            const name = r.c[2]?.v ?? "";
-            const phone = r.c[3]?.v ?? "";
-            const email = r.c[4]?.v ?? "";
-            const cel = r.c[5]?.v ?? "";
-            const statusRaw = r.c[6]?.v ?? "";
-            const updatedRaw = r.c[7]?.f ?? "";
-            const updatedDate = updatedRaw ? new Date(updatedRaw) : null;
-            const reaction = r.c[8]?.v ?? "";
-            const campaign = r.c[9]?.v ?? "";
+fetch(sheetURL)
+    .then(res => res.text())
+    .then(text => {
+        const json = JSON.parse(text.substr(47).slice(0, -2));
+        const rows = json.table.rows;
 
-            return {
-                id,
-                createdDate,
-                createdText: createdRaw,
-                name,
-                phone,
-                email,
-                cel,
-                statusRaw,
-                updatedDate,
-                updatedText: updatedRaw,
-                reaction,
-                campaign
-            };
-        });
+        allLeads = rows
+            .map(r => {
+                if (!r.c) return null;
 
-        fillCampaignList();
-        renderRows(allRows);
-        document.getElementById("loader").style.display = "none";
+                return {
+                    id:       r.c[0]?.v ?? "",
+                    date:     r.c[1]?.v ?? "",
+                    name:     r.c[2]?.v ?? "",
+                    phone:    r.c[3]?.v ?? "",
+                    email:    r.c[4]?.v ?? "",
+                    cel:      r.c[5]?.v ?? "",
+                    info:     r.c[6]?.v ?? "",
+                    status:   r.c[7]?.v ?? "",
+                    updated:  r.c[8]?.v ?? "",
+                    campaign: r.c[9]?.v ?? ""   // NOWA KOLUMNA
+                };
+            })
+            .filter(x => x !== null);
 
-    } catch (e) {
-        doc.getElementById("loader").innerHTML = "Błąd ładowania danych.";
-        console.error(e);
-    }
-}
+        populateCampaignFilter();
+        renderTable();
 
-function fillCampaignList() {
+        document.getElementById("loading").style.display = "none";
+    })
+    .catch(err => {
+        console.error("Błąd:", err);
+        document.getElementById("loading").innerText = "Błąd ładowania danych.";
+    });
+
+function populateCampaignFilter() {
     const select = document.getElementById("campaignFilter");
-    const unique = [...new Set(allRows.map(r => r.campaign).filter(v => v))];
+    const campaigns = [...new Set(allLeads.map(l => l.campaign).filter(c => c.trim() !== ""))];
 
-    unique.forEach(c => {
-        let o = document.createElement("option");
-        o.value = c;
-        o.textContent = c;
-        select.appendChild(o);
+    campaigns.forEach(c => {
+        const option = document.createElement("option");
+        option.value = c;
+        option.textContent = c;
+        select.appendChild(option);
     });
 }
 
-function renderRows(rows) {
-    const body = document.getElementById("tableBody");
-    body.innerHTML = "";
+function renderTable() {
+    const tbody = document.querySelector("#leadsTable tbody");
+    tbody.innerHTML = "";
 
-    const filterStatus = document.getElementById("statusFilter").value.toLowerCase();
-    const dateFrom = new Date(document.getElementById("dateFrom").value);
-    const dateTo   = new Date(document.getElementById("dateTo").value);
-    const sortOrder = document.getElementById("sortOrder").value;
-    const camp = document.getElementById("campaignFilter").value.toLowerCase();
+    let filtered = [...allLeads];
 
-    let filtered = rows.filter(r => {
+    // Search
+    const search = document.getElementById("searchInput").value.toLowerCase();
+    if (search) {
+        filtered = filtered.filter(l =>
+            Object.values(l).some(v => String(v).toLowerCase().includes(search))
+        );
+    }
 
-        if (filterStatus && r.statusRaw.toLowerCase() !== filterStatus) return false;
+    // Kampania
+    const camp = document.getElementById("campaignFilter").value;
+    if (camp) {
+        filtered = filtered.filter(l => l.campaign === camp);
+    }
 
-        if (camp && r.campaign.toLowerCase() !== camp) return false;
+    // Data od / do
+    const from = document.getElementById("dateFrom").value;
+    const to = document.getElementById("dateTo").value;
 
-        if (dateFrom.toString() !== "Invalid Date") {
-            if (!r.createdDate || r.createdDate < dateFrom) return false;
-        }
+    if (from) filtered = filtered.filter(l => l.date >= from);
+    if (to)   filtered = filtered.filter(l => l.date <= to);
 
-        if (dateTo.toString() !== "Invalid Date") {
-            if (!r.createdDate || r.createdDate > dateTo) return false;
-        }
+    // Sortowanie
+    const sort = document.getElementById("sortSelect").value;
+    filtered.sort((a, b) =>
+        sort === "newest" ? (b.date.localeCompare(a.date)) : (a.date.localeCompare(b.date))
+    );
 
-        return true;
-    });
-
-    filtered.sort((a, b) => {
-        if (!a.createdDate || !b.createdDate) return 0;
-        return sortOrder === "asc"
-            ? a.createdDate - b.createdDate
-            : b.createdDate - a.createdDate;
-    });
-
-    filtered.forEach(r => {
+    // Render
+    filtered.forEach(l => {
         const tr = document.createElement("tr");
 
-        const statusClass = "status-" + r.statusRaw.toLowerCase().replace(/\s+/g, "-");
-
         tr.innerHTML = `
-            <td>${r.id}</td>
-            <td>${r.createdText}</td>
-            <td>${r.name}</td>
-            <td>${r.phone}</td>
-            <td>${r.email}</td>
-            <td>${r.cel}</td>
-            <td><span class="status-badge ${statusClass}">${r.statusRaw}</span></td>
-            <td>${r.updatedText}</td>
-            <td>${r.reaction}</td>
-            <td>${r.campaign}</td>
+            <td>${l.id}</td>
+            <td>${l.date}</td>
+            <td>${l.name}</td>
+            <td>${l.phone}</td>
+            <td>${l.email}</td>
+            <td>${l.cel}</td>
+            <td>${l.info}</td>
+            <td class="status-${statusClass(l.status)}">${l.status}</td>
+            <td>${l.updated}</td>
+            <td>${l.campaign}</td>
         `;
 
-        body.appendChild(tr);
+        tbody.appendChild(tr);
     });
-
-    updateStats(filtered);
 }
 
-function updateStats(rows) {
-    document.getElementById("stat-new").textContent =
-        rows.filter(r => r.statusRaw === "Nowy").length;
-
-    document.getElementById("stat-odrzucone").textContent =
-        rows.filter(r => r.statusRaw === "Lead odrzucony").length;
-
-    document.getElementById("stat-nieodbiera").textContent =
-        rows.filter(r => r.statusRaw === "Nie odbiera").length;
-
-    document.getElementById("stat-umowione").textContent =
-        rows.filter(r => r.statusRaw === "Wizyta umówiona").length;
-
-    document.getElementById("stat-porzucone").textContent =
-        rows.filter(r => r.statusRaw === "Porzucony").length;
+function statusClass(s) {
+    if (!s) return "";
+    s = s.toLowerCase();
+    if (s.includes("nowy")) return "nowy";
+    if (s.includes("nie odbiera")) return "nie-odbiera";
+    if (s.includes("odrzu")) return "odrzucony";
+    if (s.includes("w trakcie")) return "w-trakcie";
+    if (s.includes("umów")) return "umowiony";
+    return "";
 }
 
-document.getElementById("statusFilter").addEventListener("change", () => renderRows(allRows));
-document.getElementById("dateFrom").addEventListener("change", () => renderRows(allRows));
-document.getElementById("dateTo").addEventListener("change", () => renderRows(allRows));
-document.getElementById("sortOrder").addEventListener("change", () => renderRows(allRows));
-document.getElementById("campaignFilter").addEventListener("change", () => renderRows(allRows));
-
-loadData();
+// Eventy
+document.getElementById("searchInput").addEventListener("input", renderTable);
+document.getElementById("campaignFilter").addEventListener("change", renderTable);
+document.getElementById("dateFrom").addEventListener("change", renderTable);
+document.getElementById("dateTo").addEventListener("change", renderTable);
+document.getElementById("sortSelect").addEventListener("change", renderTable);
 </script>
 
 </body>
