--- a/firmaA/index.html
+++ b/firmaA/index.html
@@ -150,7 +150,7 @@
             <select id="refreshInterval">
               <option value="60">Odśwież co 60s</option>
               <option value="0">Wyłącz auto</option>
-              <option value="120">Odśwież co 120s</option>
+              <option value="300">Odśwież co 5min</option>
             </select>
           </div>
 
