--- a/index.html
+++ b/index.html
@@ -47,54 +47,54 @@
   </style>
 
   <script>
-    const params = new URLSearchParams(window.location.search);
-    const row = params.get('row');
-    const action = params.get('action'); // Pobieramy akcję z linku w mailu
+const API_URL = "TU_WKLEJ_LINK_DO_WEB_APP_APPS_SCRIPT";
 
-    const webhookBase = "https://hooks.zapier.com/hooks/catch/24656599/uzoxf3p/";
-
-    async function processAction(statusToCheck) {
-      // Jeśli brakuje danych, nic nie rób
-      if (!row || !statusToCheck) return;
-
-      const webhookUrl = `${webhookBase}?status=${statusToCheck}&row=${row}`;
-
-      try {
-        // Wysyłamy webhook w tle
-        await fetch(webhookUrl, { mode: "no-cors" });
-      } catch (e) {
-        console.log("Webhook wysłany");
-      }
-
-      // Czekamy chwilę dla pewności i przekierowujemy
-      setTimeout(() => {
-        window.location.href = "thanks.html";
-      }, 800); // 0.8 sekundy opóźnienia, żeby użytkownik zauważył reakcję
-    }
-
-    window.onload = function() {
-      if (action && row) {
-        // SCENARIUSZ GŁÓWNY: Użytkownik wszedł z maila
-        document.getElementById('statusText').innerText = "Zapisuję Twój wybór...";
-        processAction(action);
-      } else {
-        // SCENARIUSZ AWARYJNY: Ktoś wszedł na stronę bez parametrów
-        document.getElementById('loadingSection').style.display = 'none';
-        document.getElementById('manualSection').style.display = 'block';
-      }
-    };
-    const params = new URLSearchParams(location.search);
+const params = new URLSearchParams(window.location.search);
 const id = params.get("id");
 const token = params.get("token");
 
-fetch(`API_URL?id=${id}&token=${token}`)
-  .then(r => r.json())
-  .then(d => {
-    if (!d.success) showError();
-    else render(d.lead);
-  });
+function showError(msg = "Brak dostępu do leada") {
+  document.getElementById("loadingSection").innerHTML = `
+    <h3>⛔ Błąd</h3>
+    <p style="color:#777">${msg}</p>
+  `;
+}
 
-  </script>
+function render(lead) {
+  document.getElementById("loadingSection").innerHTML = `
+    <h3>👤 ${lead.name}</h3>
+    <p><strong>Telefon:</strong> ${lead.phone}</p>
+    <p><strong>Email:</strong> ${lead.email}</p>
+    <p><strong>Usługa:</strong> ${lead.service}</p>
+
+    <div class="manual-buttons">
+      <a class="obs" onclick="updateStatus('obsluzony')">✔ Lead obsłużony</a>
+      <a class="nie" onclick="updateStatus('nie_odebral')">📞 Nie odbiera</a>
+      <a class="odrz" onclick="updateStatus('odrzucony')">❌ Lead odrzucony</a>
+    </div>
+  `;
+}
+
+function updateStatus(status) {
+  fetch(`${API_URL}?action=update&id=${id}&token=${token}&status=${status}`, {
+    mode: "no-cors"
+  });
+  document.body.innerHTML = "<h3 style='text-align:center'>✅ Zapisano status</h3>";
+}
+
+if (!id || !token) {
+  showError("Nieprawidłowy link");
+} else {
+  fetch(`${API_URL}?id=${id}&token=${token}`)
+    .then(r => r.json())
+    .then(d => {
+      if (!d.success) showError("Nieautoryzowany dostęp");
+      else render(d.lead);
+    })
+    .catch(() => showError("Błąd połączenia z API"));
+}
+</script>
+
 </head>
 <body>
 
