--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ a {
 </div>
 
 <script>
-const API_URL = "TU_WKLEJ_LINK_DO_WEB_APP_APPS_SCRIPT";
+const API_URL = "https://script.google.com/macros/s/AKfycbzBLTLdMX1DXfLdDjiIit97OWNNaIjdiXqj9_bVtWSdytJAy4x9SvRTZdSP8t3Ysd-7/exec";
 
 const params = new URLSearchParams(window.location.search);
 const row = params.get("row");
